# ray_tracing_iow

./: .gitignore  Cargo.toml  README.md
src/: color.rs  error.rs  image.rs  lib.rs  main.rs  point_3.rs  vec3.rs
src/args/: unit_tests.rs
src/consts/msg/: en_us.rs
src/error/: app.rs  image.rs
src/image/: unit_tests.rs
src/image/unit_tests/: height.rs  new.rs  width.rs
